# synthesis-platform

./: .gitignore  CMakeLists.txt  README.md  go.mod  go.sum
cmd/dssp/: main.go  package_manager.go
internal/appinfo/: appinfo.go
internal/controller/: application_info.go  language.go  server.go
internal/service/: application_info.go  calculator.go  language.go
internal/utils/: list_devices.go
lib/package_manager/: dependency.go  package_manager.go
lib/package_manager/command/: get_registry.go  rm_registry.go  set_registry.go  update.go
lib/package_manager/model/: dependency.go  installation.go  installation_dependency.go  package.go  package_text.go  registry.go  singer.go  singer_text.go  voice.go  voice_text.go
lib/package_manager/repository/: registry.go  repository.go
lib/server/: server.go
lib/server/controller/: application_info.go  language.go
lib/server/service/: application_info.go  language.go
lib/utils/: download_from_http.go  package_version.go  print_devices.go
native/: CMakeLists.txt  native_wrapper.go
native/include/: Calculator.h  ExecutionProviderInfo.h  LanguageService.h
native/src/: Calculator.cpp  ExecutionProviderInfo.cpp  LanguageService.cpp
native/swig/: native.i
scripts/vcpkg-manifest/: vcpkg.json
